# NetTrack

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/cumt_belt_yolo_r2/: data.yaml
docs/: demo_guide_windows.md  final_report.md  results.md  thesis_outline.md
legacy/groundingdino/models/GroundingDINO/: ms_deform_attn.py
legacy/groundingdino/util/: inference.py
legacy/tools/demo/: det_demo.py  video2image.py
scripts/: ablation.py  autodl  bootstrap_autodl.sh  demo.py  eval.py  eval_all.py  export_onnx.py  infer_video.py  make_dataset_figs.py  make_report_figs.py  pack_bundle.sh  prefetch_weights.py  prepare_dataset.py  prepare_dataset_r2.py  probe_gd.py  pseudo_label.py  pseudo_label_consensus.py  pseudo_label_gd.py  robust_eval.py  run_matrix.py  self_relabel.py  train.py
src/losses/: focal_loss.py
src/models/: yolov8_imp.py
src/samplers/: ohem.py  weighted_sampler.py
src/training/: frcnn_runner.py
