[project]
name = "coal-belt-detection"
version = "0.1.0"
description = "Coal mine conveyor belt foreign object detection (CUMT-BelT, YOLOv8 + importance sampling)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ultralytics>=8.3.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0,<2.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "loguru>=0.7.0",
    "torchmetrics>=1.3.0",
]

[project.optional-dependencies]
gd = [
    "transformers>=4.36,<4.50",
    "tokenizers<0.20",
    "timm>=0.9.0",
    "supervision>=0.18.0",
    "addict>=2.4.0",
    "yapf>=0.40.0",
    "pycocotools>=2.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]

[dependency-groups]
dev = []
